deploy/ingress.service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: messages2.fictionaldev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messages-cluster-ip-service
                port:
                  number: 9999
    - host: messages.fictionaldev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messages-cluster-ip-service
                port:
                  number: 9999
